# registry

./: .env.dev.sample  .gitignore  manage.py  pyproject.toml
apps/registry/: apps.py  forms.py  models.py  urls.py  views.py
apps/registry/api/: endpoints.py  routes.py  serializers.py
apps/registry/migrations/: 0001_initial.py
apps/registry/templatetags/: registry_tags.py
apps/registry/utils/: template_generator.py  template_importer.py
apps/registry/utils/exporters/: base.py  json_exporter.py  pdf_exporter.py  xlsx_exporter.py
config/: urls.py
config/settings/: base.py  dev.py
static/css/: style.css
templates/registration/: login.html
templates/registry/: base.html
templates/registry/document/: access.html  delete.html  detail.html  form.html  form_entries.html  import.html  list.html
templates/registry/includes/: footer.html  navbar.html
templates/registry/registry/: access.html  delete.html  detail.html  form.html  list.html
templates/registry/registry_schema/: delete.html  form.html  list.html
